--- a/demo/demo.html
+++ b/demo/demo.html
@@ -14,12 +14,12 @@
 	var a = new jmCanvas('canvas', 500, 500);
 	
 	//Lo iniciamos
-	a.Iniciar();
+	a.Start();
 	
 	//Ahora podemos dibujar sobre el canvas :)
-	a.Rectangulo('#EEEEEE', 20, 20, 200, 200, 1);
-	a.Recta('#AAA333', 10, 50, 50, 450, 450, 1);
-	a.Texto('Hola', 'Arial', '#000000', 30, 'center', 250, 250);
+	a.Rectangle('#EEEEEE', 20, 20, 200, 200, 1);
+	a.Rect('#AAA333', 10, 50, 50, 450, 450, 1);
+	a.Text('Hola', 'Arial', '#000000', 30, 'center', 250, 250);
 	
 </script>
 </body>
