--- a/demo/demo.html
+++ b/demo/demo.html
@@ -20,7 +20,7 @@
 	//Now we can draw in the canvas :)
 	a.Rectangle('#EEEEEE', 20, 20, 200, 200, 1);
 	a.Rect('#AAA333', 10, 50, 50, 450, 450, 1);
-	a.Text('Hola', 'Arial', '#000000', 30, 'center', 250, 250);
+	a.Text('Hello :)', 'Arial', '#000000', 30, 'center', 250, 250);
 	
 </script>
 </body>
