--- a/demo/demo.html
+++ b/demo/demo.html
@@ -19,7 +19,7 @@
 	
 	//Now we can draw in the canvas :)
 	a.Rectangle('#EEEEEE', 20, 20, 200, 200, 1);
-	a.Rect('#AAA333', 10, 50, 50, 450, 450, 1);
+	a.Line('#AAA333', 10, 50, 50, 450, 450, 1);
 	a.Text('Hello :)', 'Arial', '#000000', 30, 'center', 250, 250);
 	
 </script>
