--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<!-- Call to jmCanvas.js -->
-	<script type="text/javascript" src="../build/jmCanvas-0.1.js"></script>
+	<script type="text/javascript" src="jmCanvas.js"></script>
 </head>
 <body>
 
